<resources>
    <string name="app_name">Court Count</string>
    <string name="team_a">Team A</string>
    <string name="score_a">0</string>
    <string name="_3_points_for_A">+3 Points</string>
    <string name="_2_points_for_A">+2 Points</string>
    <string name="free_throw_for_A">Free Throw</string>
    <string name="team_b">Team B</string>
    <string name="score_B">0</string>
    <string name="_3_points_for_B">+3 Points</string>
    <string name="_2_points_for_B">+2 Points</string>
    <string name="free_throw_for_B">Free Throw</string>
    <string name="result_string" />
    <string name="reset">Reset</string>
    <string name="final_result">Final Result</string>
</resources>