<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/team_a"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/score_a"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="#FF9800"
                android:onClick="threePointForA"
                android:text="@string/_3_points_for_A" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="#FF9800"
                android:onClick="twoPointForA"
                android:text="@string/_2_points_for_A" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="#FF9800"
                android:onClick="freeThrowPointForA"
                android:text="@string/free_throw_for_A" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/team_b"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/score_B"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="#FF9800"
                android:onClick="threePointForB"
                android:text="@string/_3_points_for_B" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="#FF9800"
                android:onClick="twoPointForB"
                android:text="@string/_2_points_for_B" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="#FF9800"
                android:onClick="freeThrowPointForB"
                android:text="@string/free_throw_for_B" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result_of_the_match"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/result_string"
            android:textColor="#1E88E5"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:onClick="reset"
                android:text="@string/reset"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:onClick="final_result"
                android:text="@string/final_result"
                tools:ignore="ButtonStyle" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>